Added stuff to get a working CSS

--- a/discussion_forum/static/scss/discussion-old.scss
+++ b/discussion_forum/static/scss/discussion-old.scss
@@ -1,4 +1,7 @@
 @import 'bourbon/bourbon';
+@import 'mixins';
+@import 'variables';
+@import 'typography';
 
 @mixin blue-button {
   display: block;
