--- a/discussion_forum/static/scss/discussions-inline.scss
+++ b/discussion_forum/static/scss/discussions-inline.scss
@@ -1,4 +1,5 @@
 @import 'bourbon/bourbon';
+@import 'discussion';
 
 .discussion-module {
   @extend .discussion-body;
@@ -363,7 +364,7 @@
       font-style: normal;
       font-size: 0.8em;
       line-height: 1.6em;
-      @include border-radius(3px 3px 0 0);
+      border-radius: 3px 3px 0 0;
 
       &::-webkit-input-placeholder {
         color: #888;
@@ -378,7 +379,7 @@
       box-sizing: border-box;
       border: 1px solid #c8c8c8;
       border-top-width: 0;
-      @include border-radius(0 0 3px 3px);
+      border-radius: 0 0 3px 3px;
       overflow: hidden;
       @include transition(all, .2s, easeOut);
 
