--- a/discussion_forum/templates/mustache/_inline_thread_cohorted.mustache
+++ b/discussion_forum/templates/mustache/_inline_thread_cohorted.mustache
@@ -11,7 +11,8 @@
         </button>
     </div>
     <ol class="responses post-extended-content">
-        <li class="loading"><div class="loading-animation"><span class="sr">${_("Loading content")}</span></div></li>
+    ## TODO removed the "Loading Content" text span...
+        <li class="loading"><div class="loading-animation"></div></li>
     </ol>
     <form class="local discussion-reply-new post-extended-content"  data-id="{{id}}">
         <h4>${_("Post a response:")}</h4>
